force-app/main/default/objects/rv_Rig__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <description>Owner of the Rig</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Rigs</relationshipLabel>
    <relationshipName>Rigs_Owner</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>