force-app/main/default/objects/rv_Rig__c/fields/Manufacturer__c.field-meta.xml
<CustomField>
    <fullName>Manufacturer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Manufacturer of RV</description>
    <label>Manufacturer</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Vendor Account</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Rigs (Manufacturer)</relationshipLabel>
    <relationshipName>Rigs_Manufacturer</relationshipName>
    <type>Lookup</type>
</CustomField>